syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.asset.demo.grpc";
option java_outer_classname = "BookProto";

package book;

service BookService {
    rpc GetAllBooks(EmptyRequest) returns (BookListResponse);
    rpc GetBook(BookIdRequest) returns (BookMessage);
    rpc CreateBook(CreateBookRequest) returns (BookMessage);
    rpc UpdateBook(UpdateBookRequest) returns (BookMessage);
    rpc DeleteBook(BookIdRequest) returns (DeleteResponse);
    rpc SearchByAuthor(AuthorRequest) returns (BookListResponse);
}

message EmptyRequest {}

message BookIdRequest {
    int64 id = 1;
}

message CreateBookRequest {
    string title = 1;
    string author = 2;
    string isbn = 3;
    double price = 4;
}

message UpdateBookRequest {
    int64 id = 1;
    string title = 2;
    string author = 3;
    string isbn = 4;
    double price = 5;
}

message BookMessage {
    int64 id = 1;
    string title = 2;
    string author = 3;
    string isbn = 4;
    double price = 5;
}

message BookListResponse {
    repeated BookMessage books = 1;
}

message AuthorRequest {
    string author = 1;
}

message DeleteResponse {
    bool success = 1;
}
